<resources>
    <string name="app_name">Miroir configurateur</string>
    <string name="connexion">Connexion</string>
    <string name="e_mail">E-mail</string>
    <string name="demande_inscription">Pas de compte, inscrivez-vous</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="nom_d_utilisateur">Nom</string>
    <string name="inscription">Inscription</string>
    <string name="prenom">Prénom</string>
    <string name="code_photo">Code photo</string>
    <string name="confirmation_mot_de_passe">Confirmation mot de passe</string>
    <string name="d_j_inscrit_connectez_vous">Déjà inscrit, connectez-vous</string>
    <string name="champ_vide">Champ vide</string>
    <string name="fermer">Fermer</string>
    <string name="conn_ok">Connexion réussi</string>
    <string name="diff_mdp">Les mots de passe ne correspondent pas</string>
    <string name="inscription_ok">Inscription terminée, vous pouvez connecté</string>
    <string name="update_ok">Mise à jour réussi</string>
    <string name="modules">Modules</string>
    <string name="welcome_msg">Salut %1$s !</string>
    <string name="confirm_delete">Voulez-vous vraiement supprimer ?</string>
    <string name="delete">Supprimer</string>
    <string name="mettre_jour">Mettre à jour</string>
    <string name="ajouter_des_modules">Ajouter des modules</string>
    <string name="invalid_cred">Email ou mot de passe incorrect !</string>
    <string name="miroir_configurateur">Miroir configurateur</string>

    <string-array name="time_zone">
        <item>Pacific/Midway</item>
        <item>Pacific/Samoa</item>
        <item>Pacific/Honolulu</item>
        <item>US/Alaska</item>
        <item>America/Los_Angeles</item>
        <item>America/Tijuana</item>
        <item>US/Arizona</item>
        <item>America/Chihuahua</item>
        <item>America/Chihuahua</item>
        <item>America/Mazatlan</item>
        <item>US/Mountain</item>
        <item>America/Managua</item>
        <item>US/Central</item>
        <item>America/Mexico_City</item>
        <item>America/Mexico_City</item>
        <item>America/Monterrey</item>
        <item>Canada/Saskatchewan</item>
        <item>America/Bogota</item>
        <item>US/Eastern</item>
        <item>US/East-Indiana</item>
        <item>America/Lima</item>
        <item>America/Bogota</item>
        <item>Canada/Atlantic</item>
        <item>America/Caracas</item>
        <item>America/La_Paz</item>
        <item>America/Santiago</item>
        <item>Canada/Newfoundland</item>
        <item>America/Sao_Paulo</item>
        <item>America/Argentina/Buenos_Aires</item>
        <item>America/Godthab</item>
        <item>America/Noronha</item>
        <item>Atlantic/Azores</item>
        <item>Atlantic/Cape_Verde</item>
        <item>Africa/Casablanca</item>
        <item>Europe/London</item>
        <item>Etc/Greenwich</item>
        <item>Europe/Lisbon</item>
        <item>Europe/London</item>
        <item>Africa/Monrovia</item>
        <item>UTC</item>
        <item>Europe/Amsterdam</item>
        <item>Europe/Belgrade</item>
        <item>Europe/Berlin</item>
        <item>Europe/Berlin</item>
        <item>Europe/Bratislava</item>
        <item>Europe/Brussels</item>
        <item>Europe/Budapest</item>
        <item>Europe/Copenhagen</item>
        <item>Europe/Ljubljana</item>
        <item>Europe/Madrid</item>
        <item>Europe/Paris</item>
        <item>Europe/Prague</item>
        <item>Europe/Rome</item>
        <item>Europe/Sarajevo</item>
        <item>Europe/Skopje</item>
        <item>Europe/Stockholm</item>
        <item>Europe/Vienna</item>
        <item>Europe/Warsaw</item>
        <item>Africa/Lagos</item>
        <item>Europe/Zagreb</item>
        <item>Europe/Athens</item>
        <item>Europe/Bucharest</item>
        <item>Africa/Cairo</item>
        <item>Africa/Harare</item>
        <item>Europe/Helsinki</item>
        <item>Europe/Istanbul</item>
        <item>Asia/Jerusalem</item>
        <item>Europe/Helsinki</item>
        <item>Africa/Johannesburg</item>
        <item>Europe/Riga</item>
        <item>Europe/Sofia</item>
        <item>Europe/Tallinn</item>
        <item>Europe/Vilnius</item>
        <item>Europe/Minsk</item>
        <item>Asia/Baghdad</item>
        <item>Asia/Kuwait</item>
        <item>Africa/Nairobi</item>
        <item>Asia/Riyadh</item>
        <item>Europe/Volgograd</item>
        <item>Asia/Tehran</item>
        <item>Asia/Muscat</item>
        <item>Asia/Baku</item>
        <item>Europe/Moscow</item>
        <item>Asia/Muscat</item>
        <item>Europe/Moscow</item>
        <item>Asia/Tbilisi</item>
        <item>Asia/Yerevan</item>
        <item>Asia/Kabul</item>
        <item>Asia/Karachi</item>
        <item>Asia/Karachi</item>
        <item>Asia/Tashkent</item>
        <item>Asia/Calcutta</item>
        <item>Asia/Kolkata</item>
        <item>Asia/Katmandu</item>
        <item>Asia/Almaty</item>
        <item>Asia/Dhaka</item>
        <item>Asia/Yekaterinburg</item>
        <item>Asia/Rangoon</item>
        <item>Asia/Bangkok</item>
        <item>Asia/Jakarta</item>
        <item>Asia/Novosibirsk</item>
        <item>Asia/Hong_Kong</item>
        <item>Asia/Chongqing</item>
        <item>Asia/Krasnoyarsk</item>
        <item>Asia/Kuala_Lumpur</item>
        <item>Australia/Perth</item>
        <item>Asia/Singapore</item>
        <item>Asia/Taipei</item>
        <item>Asia/Ulan_Bator</item>
        <item>Asia/Urumqi</item>
        <item>Asia/Irkutsk</item>
        <item>Asia/Tokyo</item>
        <item>Asia/Seoul</item>
        <item>Australia/Adelaide</item>
        <item>Australia/Darwin</item>
        <item>Australia/Brisbane</item>
        <item>Australia/Canberra</item>
        <item>Pacific/Guam</item>
        <item>Australia/Hobart</item>
        <item>Australia/Melbourne</item>
        <item>Pacific/Port_Moresby</item>
        <item>Australia/Sydney</item>
        <item>Asia/Yakutsk</item>
        <item>Asia/Vladivostok</item>
        <item>Pacific/Auckland</item>
        <item>Pacific/Fiji</item>
        <item>Pacific/Kwajalein</item>
        <item>Asia/Kamchatka</item>
        <item>Asia/Magadan</item>
        <item>Pacific/Fiji</item>
        <item>Asia/Magadan</item>
        <item>PacificTongatapu></item>
    </string-array>

</resources>
