<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:padding="20dp"
    android:weightSum="1">

    <!--TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/inscription"
        android:textColor="@color/white_greyish"
        android:textSize="25sp"
        android:textStyle="bold" /-->


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:srcCompat="@drawable/tuto"
        android:layout_weight="0.74" />

    <EditText
        android:id="@+id/inscription_nom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:drawableStart="@drawable/icons_contacts_30"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/nom_d_utilisateur"
        android:inputType="textCapWords"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/white_greyish" />

    <EditText
        android:id="@+id/inscription_mdp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:drawableStart="@drawable/icons_password_30"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/mot_de_passe"
        android:inputType="textCapWords"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/white_greyish" />

    <EditText
        android:id="@+id/inscription_confirmation_mdp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:drawableStart="@drawable/icons_password_30"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/confirmation_mot_de_passe"
        android:inputType="textCapWords"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/white_greyish" />

    <EditText
        android:id="@+id/inscription_photo_code"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:drawableStart="@drawable/icons_camera_30"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/code_photo"
        android:inputType="textCapWords"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp" />

    <Button
        android:id="@+id/inscription_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_selector"
        android:padding="3dp"
        android:text="@string/inscription"
        android:textColor="#009688"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/inscription_connexion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/d_j_inscrit_connectez_vous"
        android:textColor="@color/white_greyish"
        android:textSize="15sp" />

</LinearLayout>